--- a/NDSCalc.View/App.xaml
+++ b/NDSCalc.View/App.xaml
@@ -6,6 +6,7 @@
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="Styles/AppMain.Resources.xaml"/>
                 <!-- BUTTONS -->
                 <ResourceDictionary Source="Styles/Buttons/CloseButtonStyle.xaml"/>
                 <ResourceDictionary Source="Styles/Buttons/MinimizeButtonStyle.xaml"/>
