--- a/NDSCalc.View/Windows/MainWindow.xaml
+++ b/NDSCalc.View/Windows/MainWindow.xaml
@@ -4,16 +4,97 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:vm="clr-namespace:NDSCalc.ViewModel.Windows;assembly=NDSCalc.ViewModel"
+        xmlns:controls="clr-namespace:NDSCalc.View.Controls"
         mc:Ignorable="d"
         WindowStartupLocation="CenterScreen"
-        Style="{StaticResource MainWindow.Style}">
+        DataContext="{x:Static vm:MainWindowViewModel.DemoInstance}"
+        xmlns:Themes1="clr-namespace:Microsoft.Windows.Themes;assembly=PresentationFramework.Aero" xmlns:converters="clr-namespace:NDSCalc.View.Converters"
+        Background="DarkGray"
+        SizeToContent="WidthAndHeight">
+    <FrameworkElement.Resources>
+        <Style TargetType="{x:Type TextBlock}" BasedOn="{StaticResource main.TextBlock}"/>
+        <Style TargetType="{x:Type Label}" BasedOn="{StaticResource main.Label}"/>
+        <Style TargetType="{x:Type TextBox}" BasedOn="{StaticResource InputTextBox.Style}"/>
+        <Style TargetType="{x:Type controls:InputTextBoxStakeNDSControl}" BasedOn="{StaticResource InputTextBox.Style}"/>
+    </FrameworkElement.Resources>
+    <Grid Margin="0,0,50,0">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="60"/>
+            <RowDefinition Height="60"/>
+            <RowDefinition Height="60"/>
+            <RowDefinition Height="60"/>
+            <RowDefinition Height="60"/>
+            <RowDefinition Height="60"/>
+            <RowDefinition Height="150"/>
+            <RowDefinition Height="150"/>
+            <RowDefinition Height="150"/>
+        </Grid.RowDefinitions>
+        <Label Grid.Row="0" Content="Выделить НДС"/>
+        <Grid Grid.Row="1" Height="30">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="150"/>
+                <ColumnDefinition Width="400"/>
+            </Grid.ColumnDefinitions>
+            <TextBlock Grid.Column="0" Text="Сумма без НДС:"/>
+            <controls:InputTextBoxControl Grid.Column="1" 
+                                          Text="{Binding AmountWithoutNds, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
 
-    <Window.DataContext>
-        <vm:MainWindowViewModel/>
-    </Window.DataContext>
-
-    <Grid>
-        
+        </Grid>
+        <Grid Grid.Row="2" Height="30">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="150"/>
+                <ColumnDefinition Width="400"/>
+            </Grid.ColumnDefinitions>
+            <TextBlock Grid.Column="0" Text="Ставка НДС:"/>
+            <controls:InputTextBoxStakeNDSControl Grid.Column="1"
+                                                  Text="{Binding NdsRate, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+        </Grid>
+        <Grid Grid.Row="3" Height="30">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="150"/>
+                <ColumnDefinition Width="400"/>
+            </Grid.ColumnDefinitions>
+            <TextBlock Grid.Column="0" Text="Общая сумма:"/>
+            <TextBox Grid.Column="1"  Text="{Binding TotalAmount, Mode=OneWay}" IsReadOnly="True"/>
+        </Grid>
+        <Grid Grid.Row="4" Height="30">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="150"/>
+                <ColumnDefinition Width="400"/>
+            </Grid.ColumnDefinitions>
+            <TextBlock Grid.Column="0" Text="Сумма НДС:"/>
+            <TextBox Grid.Column="1" Text="{Binding AmountOfNds, Mode=OneWay}" IsReadOnly="True"/>
+        </Grid>
+        <Label Grid.Row="5" Content="Числа прописью"/>
+        <Grid Grid.Row="6" Margin="0 0 0 15">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="150"/>
+                <ColumnDefinition Width="400"/>
+            </Grid.ColumnDefinitions>
+            <TextBlock Grid.Column="0" Text="Сумма:"/>
+            <TextBox Grid.Column="1" Style="{StaticResource InputTextBox.Style}" BorderThickness="2" Margin="0 5 0 0"
+                     Text="{Binding TotalAmount, Mode=OneWay, Converter={converters:NumberInWordsConverter}}"
+                     IsReadOnly="True" Height="120" VerticalAlignment="Top" VerticalContentAlignment="Top" TextWrapping="Wrap"/>
+        </Grid>
+        <Grid Grid.Row="7" Margin="0 0 0 15">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="150"/>
+                <ColumnDefinition Width="400"/>
+            </Grid.ColumnDefinitions>
+            <TextBlock Grid.Column="0" Text="Без НДС:"/>
+            <TextBox Grid.Column="1" Style="{StaticResource InputTextBox.Style}" BorderThickness="2" Margin="0 5 0 0"
+                     Text="{Binding AmountWithoutNds, Mode=OneWay, Converter={converters:NumberInWordsConverter}}"
+                     IsReadOnly="True" Height="120" VerticalAlignment="Top" VerticalContentAlignment="Top" TextWrapping="Wrap"/>
+        </Grid>
+        <Grid Grid.Row="8">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="150"/>
+                <ColumnDefinition Width="400"/>
+            </Grid.ColumnDefinitions>
+            <TextBlock Grid.Column="0" Text="НДС:"/>
+            <TextBox Grid.Column="1" Style="{StaticResource InputTextBox.Style}" BorderThickness="2" Margin="0 5 0 0"
+                     Text="{Binding AmountOfNds, Mode=OneWay, Converter={converters:NumberInWordsConverter}}"
+                     IsReadOnly="True" Height="120" VerticalAlignment="Top" VerticalContentAlignment="Top" TextWrapping="Wrap"/>
+        </Grid>
     </Grid>
-
 </Window>
